--- a/templates/all-artists.html
+++ b/templates/all-artists.html
@@ -5,6 +5,7 @@
 All the Artists
 {% endblock %}
 
+<!--Set active class to appropriate navbar link-->
 {% block all_artists %}
 active
 {% endblock %}
@@ -41,6 +42,7 @@ active
                 </div>
             </div>
 
+            <!--Carousel-->
 <div class="col col-lg-4 d-none d-lg-block">
             <div id="carouselExampleControls" class="carousel slide scroll" data-ride="carousel">
                 <div class="carousel-inner">
