--- a/templates/search.html
+++ b/templates/search.html
@@ -38,6 +38,7 @@ Artists search
                 </div>
             </div>
 
+            <!--Carousel-->
 <div class="col col-lg-4 d-none d-lg-block">
             <div id="carouselExampleControls" class="carousel slide scroll" data-ride="carousel">
                 <div class="carousel-inner">
