--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,6 +68,20 @@ p.card-text{
     font-family: "Montserrat", sans-serif;
 }
 
+.footer-text{
+    font-size: 1.5rem;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    text-decoration: none;
+    color: gray;
+    letter-spacing: 0.5rem;
+}
+
+.author{
+    font-size: 1rem;
+    font-family: "Montserrat", sans-serif;
+}
+
 a.link{
     font-size: 1.5rem;
     font-family: "Montserrat", sans-serif;
@@ -191,8 +205,12 @@ h4.flash{
 
 .logo span{
     font-size: 1.5rem;
-    float: left;
-    margin-left: 25%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+a.navbar-brand.logo{
+    text-align: center;
 }
 
 .navbar-collapse{
@@ -519,6 +537,19 @@ p.text-form.text-upload{
     padding-bottom: 3rem;
     text-align: center;
 }
+
+
+
+/* Footer */
+
+footer{
+    padding-top: 3rem;
+}
+
+.author{
+    padding-bottom: 3rem;
+}
+
 
 
 /* Media Queries */
