--- a/templates/artist-page.html
+++ b/templates/artist-page.html
@@ -6,11 +6,12 @@
 
 {% block content %}
 <div class="container">
-
+    <!--section displaying all the information about a specific artist-->
     <div class="container profile-container">
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 center scroll">
-                <img src="{{ artist.profile_url }}" class="img-panel profile-pic" alt="{{ artist.artist_name }}'s profile picture'">
+                <img src="{{ artist.profile_url }}" class="img-panel profile-pic"
+                    alt="{{ artist.artist_name }}'s profile picture'">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-8 information-section">
                 <div class="row information-row">
@@ -18,10 +19,12 @@
                         {{ artist.artist_name }}
                     </div>
                     <div class="col-sm-12 col-lg-6 icon-section center-tablet scroll">
-                        <a href="tel:{{ artist.phone }}" class= "link"><i class="fas fa-phone icon-profile "></i></a>
+                        <a href="tel:{{ artist.phone }}" class="link"><i class="fas fa-phone icon-profile "></i></a>
                         <a href="mailto:{{ artist.email }}" class="link"><i class="fas fa-at icon-profile "></i></a>
-                        <a href="{{ artist.facebook }}" class="link" target="_blank" rel="noopener"><i class="fab fa-facebook icon-profile "></i></a>
-                        <a href="{{ artist.instagram }}" class="link" target="_blank" rel="noopener"><i class="fab fa-instagram icon-profile "></i></a>
+                        <a href="{{ artist.facebook }}" class="link" target="_blank" rel="noopener"><i
+                                class="fab fa-facebook icon-profile "></i></a>
+                        <a href="{{ artist.instagram }}" class="link" target="_blank" rel="noopener"><i
+                                class="fab fa-instagram icon-profile "></i></a>
                     </div>
                 </div>
                 <div class="row address-row">
@@ -41,6 +44,8 @@
                 </div>
             </div>
         </div>
+
+        <!--Gallery-->
         <div class="row scroll">
             <div class="col-sm-12 col-md-6 col-lg-2">
                 <img src="{{ artist.photo_1 }}" class="image-profile" alt="">
@@ -62,11 +67,14 @@
             </div>
         </div>
     </div>
-	<div class="row">
-    <div class="col-sm-12 center">
-       <a href="{{ url_for('get_artists') }}" type="submit" class="btn btn-light btn-lg btn-form">Take me back <i class="fas fa-house-user"></i></a>
+
+    <!--Button that takes back to home page-->
+    <div class="row">
+        <div class="col-sm-12 center">
+            <a href="{{ url_for('get_artists') }}" type="submit" class="btn btn-light btn-lg btn-form">Take me back <i
+                    class="fas fa-house-user"></i></a>
+        </div>
     </div>
-    </div>
- 
+
 </div>
 {% endblock %}
