--- a/templates/artists.html
+++ b/templates/artists.html
@@ -4,6 +4,7 @@
 Artists
 {% endblock %}
 
+<!--Set active class to appropriate navbar link-->
 {% block get_artists %}
 active
 {% endblock %}
@@ -27,133 +28,139 @@ active
 </div>
 
 
-
-<div class="row">
-    <div class="col-sm-12 scroll">
-        <h3 class="subtitle center">Need some ideas? Explore some different styles!</h3>
-    </div>
-</div>
-
-<div class="card-deck ideas">
-    <div class="card scroll">
-        <img src="{{ url_for('static', filename='images/manga.jpg') }}" class="card-img-top" alt="Manga style tattoo">
-        <div class="card-body">
-            <h5 class="card-title">Manga/Anime</h5>
-            <a href="{{ url_for('show_manga') }}" class="btn btn-dark btn-form">See All</a>
+<section>
+    <div class="row">
+        <div class="col-sm-12 scroll">
+            <h3 class="subtitle center">Need some ideas? Explore some different styles!</h3>
         </div>
     </div>
-    <div class="card scroll">
-        <img src="{{ url_for('static', filename='images/nordic.jpg') }}" class="card-img-top" alt="Nordic style tattoo">
-        <div class="card-body">
-            <h5 class="card-title">Nordic Style</h5>
-            <a href="{{ url_for('show_nordic') }}" class="btn btn-dark btn-form">See All</a>
+
+    <div class="card-deck ideas">
+        <div class="card scroll">
+            <img src="{{ url_for('static', filename='images/manga.jpg') }}" class="card-img-top"
+                alt="Manga style tattoo">
+            <div class="card-body">
+                <h5 class="card-title">Manga/Anime</h5>
+                <a href="{{ url_for('show_manga') }}" class="btn btn-dark btn-form">See All</a>
+            </div>
+        </div>
+        <div class="card scroll">
+            <img src="{{ url_for('static', filename='images/nordic.jpg') }}" class="card-img-top"
+                alt="Nordic style tattoo">
+            <div class="card-body">
+                <h5 class="card-title">Nordic Style</h5>
+                <a href="{{ url_for('show_nordic') }}" class="btn btn-dark btn-form">See All</a>
+            </div>
+        </div>
+        <div class="card scroll">
+            <img src="{{ url_for('static', filename='images/japanese.jpg') }}" class="card-img-top"
+                alt="Japanese style tattoo">
+            <div class="card-body">
+                <h5 class="card-title">Japanese</h5>
+                <a href="{{ url_for('show_japanese') }}" class="btn btn-dark btn-form">See All</a>
+            </div>
+        </div>
+        <div class="card scroll">
+            <img src="{{ url_for('static', filename='images/realism.jpg') }}" class="card-img-top"
+                alt="Realistic style tattoo">
+            <div class="card-body">
+                <h5 class="card-title">Realism</h5>
+                <a href="{{ url_for('show_realism') }}" class="btn btn-dark btn-form">See All</a>
+            </div>
         </div>
     </div>
-    <div class="card scroll">
-        <img src="{{ url_for('static', filename='images/japanese.jpg') }}" class="card-img-top"
-            alt="Japanese style tattoo">
-        <div class="card-body">
-            <h5 class="card-title">Japanese</h5>
-            <a href="{{ url_for('show_japanese') }}" class="btn btn-dark btn-form">See All</a>
-        </div>
-    </div>
-    <div class="card scroll">
-        <img src="{{ url_for('static', filename='images/realism.jpg') }}" class="card-img-top"
-            alt="Realistic style tattoo">
-        <div class="card-body">
-            <h5 class="card-title">Realism</h5>
-            <a href="{{ url_for('show_realism') }}" class="btn btn-dark btn-form">See All</a>
-        </div>
-    </div>
-</div>
+</section>
 
-
-
+<!--Search Box-->
 <div class="row">
     <div class="col-sm-12 center scroll">
         <h3 class="subtitle center">Or simply search our database</h3>
         <form class="form-inline search-form" action="{{ url_for('search') }}" method="POST">
             <input class="search-box" type="search" placeholder=" Search" name="query" id="query" required>
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search  <i class="fas fa-search"></i></button>
+            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search <i
+                    class="fas fa-search"></i></button>
         </form>
     </div>
 </div>
 
 
-
-
-<div class="row">
-    <div class="col-sm-12 scroll">
-        <h3 class="subtitle center">Last added</h3>
+<!--Section displaying last 5 artists added to database-->
+<section>
+    <div class="row">
+        <div class="col-sm-12 scroll">
+            <h3 class="subtitle center">Last added</h3>
+        </div>
     </div>
-</div>
 
 
-<!--Card with Artist Profile-->
-{% for artist in artists %}
-<div class="row card-artist">
-    <div class="col-sm-12">
-        <div class="row">
-            <div class="col col-sm-12 col-lg-8">
-                <div class="row panel">
-                    <div class="col-sm-12 col-md-6">
-                        <div class="card scroll" style="width: 100%;">
-                            <img class="card-img-top img-panel" src="{{ artist.profile_url }}"
-                                alt="Profile picture for {{ artist.artist_name }}">
+    <!--Card with Artist Profile-->
+    {% for artist in artists %}
+    <div class="row card-artist">
+        <div class="col-sm-12">
+            <div class="row">
+                <div class="col col-sm-12 col-lg-8">
+                    <div class="row panel">
+                        <div class="col-sm-12 col-md-6">
+                            <div class="card scroll" style="width: 100%;">
+                                <img class="card-img-top img-panel" src="{{ artist.profile_url }}"
+                                    alt="Profile picture for {{ artist.artist_name }}">
+                            </div>
+                        </div>
+                        <div class="d-none d-md-block col-md-6">
+                            <h5 class="card-title scroll">{{ artist.artist_name }}</h5>
+                            <p class="card-text scroll">{{ artist.bio }}</p>
+                            <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
+                                {{ artist.artist_name }}'s page</a>
                         </div>
                     </div>
-                    <div class="d-none d-md-block col-md-6">
-                        <h5 class="card-title scroll">{{ artist.artist_name }}</h5>
-                        <p class="card-text scroll">{{ artist.bio }}</p>
-                        <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
-                            {{ artist.artist_name }}'s page</a>
+                    <div class="row d-sm-block d-md-none">
+                        <div class="col-sm-12 d-sm-block d-md-none">
+                            <h5 class="card-title scroll">{{ artist.artist_name }}</h5>
+                            <p class="card-text scroll">{{ artist.bio }}</p>
+                            <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
+                                {{ artist.artist_name }}'s page</a>
+                        </div>
                     </div>
                 </div>
-                <div class="row d-sm-block d-md-none">
-                    <div class="col-sm-12 d-sm-block d-md-none">
-                        <h5 class="card-title scroll">{{ artist.artist_name }}</h5>
-                        <p class="card-text scroll">{{ artist.bio }}</p>
-                        <a href="{{ url_for('show_artist', artist_id=artist._id) }}" class="link">Go to
-                            {{ artist.artist_name }}'s page</a>
+
+                <div class="col col-lg-4 d-none d-lg-block">
+                    <div id="carouselExampleControls" class="carousel slide scroll" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="...">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
+
+
             </div>
 
-<div class="col col-lg-4 d-none d-lg-block">
-            <div id="carouselExampleControls" class="carousel slide scroll" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="...">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
         </div>
 
 
-        </div>
-        
+
+
     </div>
-
-
-
-
-</div>
-    <hr>
-    <hr>
-    <hr>
+</section>
+<hr>
+<hr>
+<hr>
 {% endfor %}
 {% endblock %}
