--- a/templates/base.html
+++ b/templates/base.html
@@ -1,87 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get My Tattoo</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     {% block styles %}
     {% endblock %}
 </head>
+
 <body>
-<!--Navbar with dropdown menu and search bar-->
-<nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-black">
-  <a class="navbar-brand logo" href="{{ url_for('get_artists') }}">Get My tattoo<br>
-  <span>estd &middot; 2020</span>
-  </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item {% block get_artists %}{% endblock %}">
-        <a class="nav-link" href="{{ url_for('get_artists') }}">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item {% block all_artists %}{% endblock %}">
-        <a class="nav-link" href="{{ url_for('all_artists') }}">All artists <span class="sr-only"></span></a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Are you an artist?
+    <!--Navbar with dropdown menu and search bar-->
+    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-black" id="navigation">
+        <a class="navbar-brand logo" href="{{ url_for('get_artists') }}">Get My tattoo<br>
+            <span>estd &middot; 2020</span>
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item {% block register %}{% endblock %}" href="{{ url_for('register') }}">Register</a>
-          <a class="dropdown-item {% block login %}{% endblock %}" href="{{ url_for('login') }}">Log In</a>
-          {% if session.user %}
-            <a class="dropdown-item {% block profile %}{% endblock %}" href="{{ url_for('profile', username=session['user']) }}">My Profile</a>
-            <a class="dropdown-item {% block edit %}{% endblock %}" href="{{ url_for('edit_profile', username=session['user']) }}">Edit Profile</a>
-            <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
-          {% endif %}
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item {% block get_artists %}{% endblock %}">
+                    <a class="nav-link" href="{{ url_for('get_artists') }}">Home <span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item {% block all_artists %}{% endblock %}">
+                    <a class="nav-link" href="{{ url_for('all_artists') }}">All artists <span
+                            class="sr-only"></span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Are you an artist?
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item {% block register %}{% endblock %}"
+                            href="{{ url_for('register') }}">Register</a>
+                        <a class="dropdown-item {% block login %}{% endblock %}" href="{{ url_for('login') }}">Log
+                            In</a>
+                        <!--The following links are visible only to logged in users-->
+                        {% if session.user %}
+                        <a class="dropdown-item {% block profile %}{% endblock %}"
+                            href="{{ url_for('profile', username=session['user']) }}">My Profile</a>
+                        <a class="dropdown-item {% block edit %}{% endblock %}"
+                            href="{{ url_for('edit_profile', username=session['user']) }}">Edit Profile</a>
+                        <a class="dropdown-item" href="{{ url_for('logout') }}">Log Out</a>
+                        {% endif %}
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline ml-auto p-2" action="{{ url_for('search') }}" method="POST">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" name="query" id="query" required>
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
-      </li>
-    </ul>
-    <form class="form-inline ml-auto p-2" action="{{ url_for('search') }}" method="POST">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" name="query" id="query" required>
-      <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-<!--Main section-->
-<main>
-<div class="container introduction">
-<h1 class="center">The Hypest Database for Tattoo Artists</h1>
-<h2 class="center">Find your next tattoo artist by searching our database by location, language, style</h2>
-</div>
-<!--Message flashed-->
-<section>
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-        {% for message in messages %}
+    </nav>
+
+    <!--Main section-->
+    <main>
+        <div class="container introduction">
+            <h1 class="center">The Hypest Database for Tattoo Artists</h1>
+            <h2 class="center">Find your next tattoo artist by searching our database by location, language, style</h2>
+        </div>
+
+        <!--Message flashed section-->
+        <section>
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            {% for message in messages %}
             <div class="row">
-            <div class="col-sm-12">
-                <h4 class="flash">{{ message }}</h4>
+                <div class="col-sm-12">
+                    <h4 class="flash">{{ message }}</h4>
                 </div>
             </div>
-        {% endfor %}
-    {% endif %}
-{% endwith %}
-</section>
-    {% block content %}
-    {% endblock %}
+            {% endfor %}
+            {% endif %}
+            {% endwith %}
+        </section>
 
-</main>
-<!--Footer-->
-<footer class="bg-black center">
-<small>Get My Tattoo is a project by KatiaDB&copy; 2020</small>
-</footer>
-<script src="{{ url_for('static', filename='js/validation.js') }}"></script>
-<script src="{{ url_for('static', filename='js/script-scroll.js') }}"></script>
-<script src="{{ url_for('static', filename='js/back.js') }}"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+        {% block content %}
+        {% endblock %}
+
+    </main>
+
+    <!--Footer-->
+    <footer class="bg-black center">
+        <p class="card-text"><a href="#navigation" class="footer-text link">To the top <i
+                    class="fas fa-angle-double-up"></i></a></p>
+        <a class="navbar-brand logo" href="{{ url_for('get_artists') }}">Get My tattoo<br>
+            <span>estd &middot; 2020</span>
+        </a>
+        <p class="card-text">Questions or suggestions? Contact <a href="mailto:webmaster@mail.com"
+                class="card-text link">"Get My Tattoo"</a></p>
+        <small class="author">Get My Tattoo is a project by KatiaDB&copy; 2020</small>
+    </footer>
+
+    <!--Scripts-->
+    <script src="{{ url_for('static', filename='js/validation.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script-scroll.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/back.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
