--- a/templates/login.html
+++ b/templates/login.html
@@ -4,6 +4,7 @@
 Login to Get My Tattoo
 {% endblock %}
 
+<!--Set active class to appropriate navbar link-->
 {% block login %}
 active
 {% endblock %}
@@ -11,6 +12,7 @@ active
 {% block content %}
 <div class="container background-image">
     <div class="row">
+        <!--Form to log in-->
         <form class="col col-md-6 offset-md-1 sign-panel needs-validation" action="{{ url_for('login') }}" method="POST"
             novalidate>
             <legend class="subtitle">Hello, artist!
@@ -50,6 +52,8 @@ active
             </div>
             <button class="btn btn-light btn-block" type="submit"> <i
                     class="fas fa-sign-in-alt form-icon text-muted"></i></button>
+                    
+            <!--Link to register template for those who don't have an account yet-->
             <div class="row">
                 <div class="col-sm-12">
                     <p class="link-form">Forgot to register?
