--- a/templates/show-styles.html
+++ b/templates/show-styles.html
@@ -38,56 +38,58 @@ Show Tattoo Styles
                 </div>
             </div>
 
-<div class="col col-lg-4 d-none d-lg-block scroll">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
+            <!--Carousel-->
+            <div class="col col-lg-4 d-none d-lg-block scroll">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="...">
+                        </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="...">
-                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
-        </div>
 
 
         </div>
-        
+
     </div>
 
 
 
 
 </div>
-    <hr>
-    <hr>
-    <hr>
+<hr>
+<hr>
+<hr>
 {% endfor %}
-             {% else %}
-                <div class="row">
-	<div class="col-sm-12">
-		<h3 class="subtitle center">No results were found.<br>
-        Try with other words.<br>
-        Hint: You can search by city, state, name, language, style
+{% else %}
+<div class="row">
+    <div class="col-sm-12">
+        <h3 class="subtitle center">No results were found.<br>
+            Try with other words.<br>
+            Hint: You can search by city, state, name, language, style
         </h3>
-	</div>
+    </div>
 </div>
 {% endif %}
-                <div class="row">
+<div class="row">
     <div class="col-sm-12 center">
-       <a href="{{ url_for('get_artists') }}" type="submit" class="btn btn-light btn-lg btn-form">Take me back <i class="fas fa-house-user"></i></a>
+        <a href="{{ url_for('get_artists') }}" type="submit" class="btn btn-light btn-lg btn-form">Take me back <i
+                class="fas fa-house-user"></i></a>
     </div>
-    </div>
-				{% endblock %}
+</div>
+{% endblock %}
