--- a/templates/login.html
+++ b/templates/login.html
@@ -15,8 +15,8 @@ active
         <!--Form to log in-->
         <form class="col col-md-6 offset-md-1 sign-panel needs-validation" action="{{ url_for('login') }}" method="POST"
             novalidate>
-            <legend class="subtitle">Hello, artist!
-                <br>Log In to your profile</legend>
+            <h4 class="subtitle panel-text">Hello, artist!
+                <br>Log In to your profile</h4>
             <div class="form-group scroll">
                 <label for="username" class="d-none">Username</label>
                 <div class="input-group input-group-sm">
@@ -52,7 +52,7 @@ active
             </div>
             <button class="btn btn-light btn-block" type="submit"> <i
                     class="fas fa-sign-in-alt form-icon text-muted"></i></button>
-                    
+
             <!--Link to register template for those who don't have an account yet-->
             <div class="row">
                 <div class="col-sm-12">
