--- a/templates/register.html
+++ b/templates/register.html
@@ -15,8 +15,8 @@ active
         <!--Form to register-->
         <form class="col col-md-6 offset-md-1 sign-panel needs-validation" action="{{ url_for('register') }}"
             method="POST" novalidate>
-            <legend class="subtitle">Hello, artist!
-                <br>Please register here</legend>
+            <h4 class="subtitle panel-text">Hello, artist!
+                <br>Please register here</h4>
             <div class="form-group scroll">
                 <label for="username" class="d-none">Username</label>
                 <div class="input-group input-group-sm">
