Fixed CSS according to Autoprefixer and added text in readme.md

--- a/templates/artist-page.html
+++ b/templates/artist-page.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="container">
-    <!--section displaying all the information about a specific artist-->
+    <!-- Section displaying all the information about a specific artist-->
     <div class="container profile-container">
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 center scroll">
