--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Shadows+Into+Light&display=swap');
 
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 html {
   scroll-behavior: smooth;
 }
@@ -223,7 +230,8 @@ a.navbar-brand.logo{
 
 button.btn.btn-outline-light:hover{
     color: #e1e1e1;
-    box-shadow: 0 0 20px #e1e1e1;
+    -webkit-box-shadow: 0 0 20px #e1e1e1;
+            box-shadow: 0 0 20px #e1e1e1;
     text-shadow: 0 0 15px #e1e1e1;
     border: 2px solid #e6e6e6;
 }
@@ -238,7 +246,8 @@ button.navbar-toggler{
 
 button.navbar-toggler:hover{
     color: #e1e1e1;
-    box-shadow: 0 0 20px #e1e1e1;
+    -webkit-box-shadow: 0 0 20px #e1e1e1;
+            box-shadow: 0 0 20px #e1e1e1;
     text-shadow: 0 0 15px #e1e1e1;
     border: 2px solid #e6e6e6;
 }
@@ -264,7 +273,8 @@ button.navbar-toggler:hover{
 .welcome-image img {
     width: 100%;
     max-height: 50rem;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 .overlay-text {
@@ -272,7 +282,9 @@ button.navbar-toggler:hover{
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -287,7 +299,8 @@ button.navbar-toggler:hover{
 
 .card-img-top{
     height: 28rem;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
 }
 
 .card-body{
@@ -331,7 +344,8 @@ button.navbar-toggler:hover{
 
 .img-panel{
 height: 40rem;
-object-fit: cover;
+-o-object-fit: cover;
+   object-fit: cover;
 }
 
 
@@ -377,7 +391,8 @@ object-fit: cover;
 
 .form-input:focus, .form-input:active{
     /* Box shadow from https://css-tricks.com/almanac/properties/b/box-shadow/ */
-    box-shadow: 0 8px 6px -6px black;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+            box-shadow: 0 8px 6px -6px black;
     background-color: #E8E8E8;
     border-radius: 2.5rem;
 }
@@ -392,6 +407,22 @@ span.input-group-text{
 }
 
 /* Code adapted from https://www.w3schools.com/howto/howto_css_placeholder.asp */
+.form-input::-webkit-input-placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: black;
+  opacity: 1; /* Firefox */
+}
+.form-input::-moz-placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: black;
+  opacity: 1; /* Firefox */
+}
+.form-input:-ms-input-placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: black;
+  opacity: 1; /* Firefox */
+}
+.form-input::-ms-input-placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: black;
+  opacity: 1; /* Firefox */
+}
 .form-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: black;
   opacity: 1; /* Firefox */
@@ -407,7 +438,8 @@ span.input-group-text{
 
 button, a.btn-form{
     margin-top: 3rem;
-    box-shadow: 0 8px 6px -6px black;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+            box-shadow: 0 8px 6px -6px black;
     font-family: "Montserrat", sans-serif;
     text-transform: uppercase;
 }
@@ -491,7 +523,8 @@ div.container.profile-container{
 }
 
 img{
-    box-shadow: 0 8px 6px -6px black;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+            box-shadow: 0 8px 6px -6px black;
 }
 
 button.btn-form, a.btn-form{
@@ -500,14 +533,16 @@ button.btn-form, a.btn-form{
 
 button.btn-form:hover, a.btn-form:hover{
     color: #e1e1e1;
-    box-shadow: 0 0 20px #e1e1e1;
+    -webkit-box-shadow: 0 0 20px #e1e1e1;
+            box-shadow: 0 0 20px #e1e1e1;
     text-shadow: 0 0 15px #e1e1e1;
     border: 2px solid #e6e6e6;
 }
 
 form.add-profile input:hover, form.add-profile textarea:hover{
     color: #333333;
-    box-shadow: 0 0 20px #e1e1e1;
+    -webkit-box-shadow: 0 0 20px #e1e1e1;
+            box-shadow: 0 0 20px #e1e1e1;
     text-shadow: 0 0 15px #e1e1e1;
     border: 2px solid #e6e6e6;
 }
@@ -525,7 +560,8 @@ form.add-profile input:hover, form.add-profile textarea:hover{
 
 form.add-profile input, textarea{
     border-radius: 25px;
-    box-shadow: 0 8px 6px -6px black;
+    -webkit-box-shadow: 0 8px 6px -6px black;
+            box-shadow: 0 8px 6px -6px black;
     letter-spacing: 1px;
 }
 
