--- a/templates/artists.html
+++ b/templates/artists.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-Artists
+Get My Tattoo - Home Page
 {% endblock %}
 
 <!--Set active class to appropriate navbar link-->
