Changed part of text in message displayed if no results are available when a user searches for a word

--- a/templates/search.html
+++ b/templates/search.html
@@ -81,7 +81,7 @@ Artists search
     <div class="col-sm-12">
         <h3 class="subtitle center">No results were found.<br>
             Try with other words.<br>
-            Hint: You can search by city, state, name, language, style
+            Hint: You can search by city, country or state, name, language, style
         </h3>
     </div>
 </div>
