--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<meta name="description"
+		content="Get My Tattoo is a database that collects the best tattoo artists">
+	<meta name="keywords" content="tattoo, artist, style">
+	<meta name="author" content="Katia De Bon">
     <title>{% block title %}{% endblock %}</title>
     <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='favicon/apple-touch-icon.png') }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon/favicon-32x32.png') }}">
