--- a/templates/artist-page.html
+++ b/templates/artist-page.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4 center scroll">
                 <img src="{{ artist.profile_url }}" class="img-panel profile-pic"
-                    alt="{{ artist.artist_name }}'s profile picture'">
+                    alt="{{ artist.artist_name }}'s profile picture'" loading="lazy">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-8 information-section">
                 <div class="row information-row">
@@ -48,22 +48,22 @@
         <!--Gallery-->
         <div class="row scroll">
             <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_1 }}" class="image-profile" alt="">
+                <img src="{{ artist.photo_1 }}" class="image-profile" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_2 }}" class="image-profile" alt="">
+                <img src="{{ artist.photo_2 }}" class="image-profile" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_3 }}" class="image-profile" alt="">
+                <img src="{{ artist.photo_3 }}" class="image-profile" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_4 }}" class="image-profile" alt="">
+                <img src="{{ artist.photo_4 }}" class="image-profile" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_5 }}" class="image-profile" alt="">
+                <img src="{{ artist.photo_5 }}" class="image-profile" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
             </div>
             <div class="col-sm-12 col-md-6 col-lg-2">
-                <img src="{{ artist.photo_6 }}" class="image-profile" alt="">
+                <img src="{{ artist.photo_6 }}" class="image-profile" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
             </div>
         </div>
     </div>
