--- a/templates/search.html
+++ b/templates/search.html
@@ -18,7 +18,7 @@ Artists search
                     <div class="col-sm-12 col-md-6">
                         <div class="card scroll" style="width: 100%;">
                             <img class="card-img-top img-panel" src="{{ artist.profile_url }}"
-                                alt="Profile picture for {{ artist.artist_name }}">
+                                alt="Profile picture for {{ artist.artist_name }}" loading="lazy">
                         </div>
                     </div>
                     <div class="d-none d-md-block col-md-6">
@@ -43,13 +43,13 @@ Artists search
                 <div id="carouselExampleControls" class="carousel slide scroll" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
+                            <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="...">
+                            <img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="...">
+                            <img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
