--- a/templates/show-styles.html
+++ b/templates/show-styles.html
@@ -43,13 +43,13 @@ Show Tattoo Styles
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="...">
+                            <img src="{{ artist.photo_1 }}" class="d-block w-100 img-panel" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="...">
+                            <img src="{{ artist.photo_2 }}" class="d-block w-100 img-panel" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="...">
+                            <img src="{{ artist.photo_3 }}" class="d-block w-100 img-panel" alt="Tattoo by {{ artist.artist_name }}" loading="lazy">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
