Fixed bug in anchor link inside footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,8 +102,8 @@
 
     <!--Footer-->
     <footer class="bg-black center">
-        <p class="card-text"><a href="#navigation" class="footer-text link">To the top <i
-                    class="fas fa-angle-double-up"></i></a></p>
+        <a href="#navigation" class="footer-text link"><p class="card-text">To the top <i
+                    class="fas fa-angle-double-up"></i></p></a>
         <a class="navbar-brand logo" href="{{ url_for('get_artists') }}">Get My tattoo<br>
             <span>estd &middot; 2020</span>
         </a>
